@@ -18,7 +18,7 @@
             <value name="Language" type="java.lang.String"/>
         </collection>
         <structure name="DataProviderContact" usage="optional" test-method="hasDataProviderContact">
-            <structure name="vcard" field="dataProviderContact" ns="urn:ietf:params:xml:ns:vcard-4.0"
+            <structure name="vcard" field="dataProviderContact" ns="urn:ietf:params:xml:ns:vcard-4.0" usage="optional"
               marshaller="org.dellroad.jibxbindings.vcard.VCardMarshaller"
               unmarshaller="org.dellroad.jibxbindings.vcard.VCardMarshaller"/>
         </structure>
